ola seo comments

--- a/downloads.html
+++ b/downloads.html
@@ -71,7 +71,7 @@
           <a href="index.html"
              class="col-10 col-lg-4 d-block">
             <img src="img/logo-conan.png"
-                 alt="JFrog Conan">
+                 alt="Conan C++ Package Manager">
           </a>
 
           <!-- HAMBURGER -->
@@ -88,7 +88,9 @@
             <!-- HEADER NAV -->
             <nav class="header-nav align-items-center d-lg-flex"
                  id="headerNav">
-              <a href="https://github.com/conan-io/conan"
+              <a 
+                 
+                 href="https://github.com/conan-io/conan" rel="nofollow"
                  class="btn bg-bright-gray">
                 <img src="img/small_github.png"
                      alt="Github">
@@ -119,11 +121,11 @@
     <section class="downloads-hero position-relative" id="downloadsHero">
       <img src="img/downloads-hero-bg-new.png"
            class="position-absolute hero-bg downloads-hero-bg d-none d-xl-inline d-only-hero-bg"
-           alt="JFrog Conan">
+           alt="Conan C++ Package Manager">
       <div class="container">
         <div class="row">
           <div class="col-12 py-5">
-            <h2 class="font-weight-bold text-center">Downloads</h2>
+            <h1 class="font-weight-bold text-center">Downloads</h1>
           </div>
         </div>
       </div>
@@ -281,7 +283,7 @@
                          Any OS: From Source
                       </div>
                       <!-- ACTION -->
-                      <a href="https://github.com/conan-io/conan" target="_blank" data-os="github" class="cn-box cn-action cn-link">
+                      <a href="https://github.com/conan-io/conan" rel="nofollow" target="_blank" data-os="github" class="cn-box cn-action cn-link">
                       </a>
                     </div>
                     <!-- / GITHUB -->
@@ -719,7 +721,7 @@ dl.bintray.com/jfrog/artifactory-cpp-ce:latest
                     <li><a href="https://conan.io/center">
                         Conan-Center
                       </a></li>
-                    <li><a href="https://github.com/conan-io/conan">
+                    <li><a href="https://github.com/conan-io/conan" rel="nofollow">
                         GitHub
                       </a></li>
                   </ul>
