--- a/index.html
+++ b/index.html
@@ -67,24 +67,18 @@
     <header id="masthead">
       <div class="container">
         <div class="row d-flex justify-content-between">
+
           <!-- LOGO -->
-          <a
-            href="index.html"
-            class="col-10 col-lg-4 d-block"
-          >
-            <img
-              src="img/logo-conan.png"
-              class=""
-              alt="JFrog Conan"
-            />
+          <a href="index.html"
+             class="col-10 col-lg-4 d-block">
+            <img src="img/logo-conan.png"
+                 alt="Conan C++ Package Manager">
           </a>
 
           <!-- HAMBURGER -->
-          <div class="col-2 d-flex d-lg-none align-items-center justify-content-end header-hamburger-col">
-            <button
-              class="d-block d-lg-none hamburger hamburger--collapse text-right"
-              type="button"
-            >
+          <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
+            <button class="d-block d-lg-none hamburger hamburger--collapse text-right"
+                    type="button">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
@@ -93,43 +87,34 @@
 
           <div class="col-lg-6 text-right d-flex align-items-center justify-content-end">
             <!-- HEADER NAV -->
-            <nav
-              class="header-nav align-items-center d-lg-flex"
-              id="headerNav"
-            >
-              <a
-                href="https://github.com/conan-io/conan"
-                class="btn bg-bright-gray"
-              >
-                <img
-                  src="img/small_github.png"
-                  alt="Github"
-                />
+            <nav class="header-nav align-items-center d-lg-flex"
+                 id="headerNav">
+              <a 
+                 
+                 href="https://github.com/conan-io/conan" rel="nofollow"
+                 class="btn bg-bright-gray">
+                <img src="img/small_github.png"
+                     alt="Github">
               </a>
-              <a
-                href="https://docs.conan.io/"
-                class="btn bg-bright-gray black"
-              >
+              <a href="https://docs.conan.io/"
+                 class="btn bg-bright-gray black">
                 Docs
               </a>
-              <a
-                href="https://blog.conan.io/"
-                class="btn bg-bright-gray black"
-              >
+              <a href="https://blog.conan.io/"
+                 class="btn bg-bright-gray black">
                 Blog
               </a>
-              <a
-                href="https://conan.io/center/"
-                class="btn bg-blue white"
-                target="_blank"
-              >
-                <img
-                  src="img/small-search.png"
-                  alt="Search"
-                /> Conan-Center
+              <a href="https://conan.io/center/"
+                 class="btn bg-blue white"
+                 target="_blank">
+                <img src="img/small-search.png"
+                     alt="Search">
+                 Conan-Center
               </a>
             </nav>
+
           </div>
+
         </div>
       </div>
     </header>
@@ -142,7 +127,7 @@
       <img
         src="img/hero-bg.png"
         class="position-absolute hero-bg"
-        alt="JFrog Conan"
+        alt="Conan C++ Package Manager"
       />
       <div class="container py-5">
         <div class="row">
@@ -151,9 +136,9 @@
               <h1 class="white">
                 Conan, the C/C++ Package Manager
               </h1>
-              <p class="homepage-hero-paragraph my-3 px-0 px-md-4 white">
+              <h2 class="homepage-hero-paragraph my-3 px-0 px-md-4 white">
                 The open source, decentralized and multi-platform package <br class="d-none d-md-inline" /> manager to create and share all your native binaries.
-              </p>
+              </h2>
               <div class="downloads-cta arrow-cta">
                 <div class="button_cont">
                   <a href="downloads.html" class="example_f cta bg-green" id="download_btn_middle">
@@ -204,7 +189,7 @@
                   alt="UNIVERSALITY"
                 />
               </div>
-              <h3 class="mt-3 font-weight-bold">UNIVERSALITY</h3>
+              <h4 class="mt-3 font-weight-bold">UNIVERSALITY</h4>
               <div class="advantage-text text-left">
                 <p class="mt-3 font-weight-light line-1">
                   <strong>All platforms.</strong> Windows, Linux, Apple, FreeBSD, Android, iOS, embedded, cross-building, bare metal, etc.
@@ -226,7 +211,7 @@
                   alt="FLEXIBILITY & SPEED"
                 />
               </div>
-              <h3 class="mt-3 font-weight-bold">FLEXIBILITY & SPEED</h3>
+              <h4 class="mt-3 font-weight-bold">FLEXIBILITY & SPEED</h4>
               <div class="advantage-text text-left">
                 <p class="mt-3 font-weight-light line-1">
                   <strong>Full management of binaries. </strong> <br />
@@ -249,7 +234,7 @@
                   alt="FLEXIBILITY & SPEED"
                 />
               </div>
-              <h3 class="mt-3 font-weight-bold">CONTROL</h3>
+              <h4 class="mt-3 font-weight-bold">CONTROL</h4>
               <div class="advantage-text text-left">
                 <p class="mt-3 font-weight-light line-1">
                   <strong>Decentralized client-server architecture.</strong> Run your own server for free with JFrog Artifactory on-prem to fully own your packages and binaries.
@@ -269,14 +254,14 @@
     <section class="learn-more bg-bright-gray py-0 py-md-5 position-relative" id="learnMore">
       <img
         data-src="img/lm-bg.png"
-        alt="JFrog Conan"
+        alt="Conan C++ Package Manager"
         class="lm-bg position-absolute lazy d-none d-xl-inline"
       />
       <div class="container text-center">
         <!-- TITLE -->
         <div class="row pb-2 pt-4 pt-md-5 py-md-5 mb-4">
           <div class="col-12">
-            <h2>LEARN MORE ABOUT</h2>
+            <div class="h2">LEARN MORE ABOUT</div>
           </div>
         </div>
 
@@ -332,11 +317,13 @@
               </h3>
               <div class="content one-advantage-content">
                 <p class="text">
+                  <a href="https://conan.io/center" target="_blank" class="text-link">
                   ConanCenter is the central repository where you can search and
                   discover all of the available open source Conan packages
                   created by the community. It includes recipe and configuration
                   information, and makes it easy to see package metadata in the
                   UI.
+                  </a>
                 </p>
                 <a
                   href="https://conan.io/center"
@@ -357,11 +344,11 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="white d-flex justify-content-center" id="signUpTitle">
+            <div class="h2 white d-flex justify-content-center" id="signUpTitle">
               <div class="position-relative"><img data-src="img/letter.png" alt="Sign Up"
                   class="position-absolute letter lazy"></div>
               <span>SIGN ME UP FOR RELEASE UPDATES</span>
-            </h2>
+            </div>
             <div class="mktoFormWrapper">
               <!-- FOOTER FORM HERE -->
               <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
@@ -440,7 +427,7 @@
 
         <div class="row">
           <div class="col-12">
-            <h2 class="text-center py-2 mb-4 mb-md-5">OUR USERS</h2>
+            <div class="h2 text-center py-2 mb-4 mb-md-5">OUR USERS</div>
           </div>
         </div>
 
@@ -559,7 +546,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="white text-center mt-2 mb-5">OUR USERS' VOICE</h2>
+            <div class="h2 white text-center mt-2 mb-5">OUR USERS' VOICE</div>
           </div>
         </div>
 
@@ -967,12 +954,12 @@
       <img
         data-src="img/hero-bg.png"
         class="lazy position-absolute contact-bg d-none d-xl-inline"
-        alt="JFrog Conan"
+        alt="Conan C++ Package Manager"
       />
       <div class="container form-container pt-2 pb-5">
         <div class="row">
           <div class="col-12 text-center py-4 title-mail">
-            <h2 class="font-weight-light" id="contactUsTitle">CONTACT US</h2>
+            <h6 class="h2 font-weight-light" id="contactUsTitle">CONTACT US</h6>
             <a
               href="mailto:info@conan.io"
               class="font-weight-bold mt-n2 d-block"
@@ -1084,7 +1071,7 @@
                     <li><a href="https://conan.io/center">
                         Conan-Center
                       </a></li>
-                    <li><a href="https://github.com/conan-io/conan">
+                    <li><a href="https://github.com/conan-io/conan" rel="nofollow">
                         GitHub
                       </a></li>
                   </ul>
