--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -50,13 +50,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row d-flex justify-content-between">
 
       <!-- LOGO -->
-      <a href="index.html" class="col-10 col-lg-4 d-block">
-        <img src="img/logo-conan.png" class="" alt="JFrog Conan">
+      <a href="index.html"
+          class="col-10 col-lg-4 d-block">
+        <img src="img/logo-conan.png"
+              alt="Conan C++ Package Manager">
       </a>
 
       <!-- HAMBURGER -->
       <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
-        <button class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button">
+        <button class="d-block d-lg-none hamburger hamburger--collapse text-right"
+                type="button">
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
           </span>
@@ -65,18 +68,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <div class="col-lg-6 text-right d-flex align-items-center justify-content-end">
         <!-- HEADER NAV -->
-        <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
-          <a href="https://github.com/conan-io/conan" class="btn bg-bright-gray">
-            <img src="img/small_github.png" alt="Github">
+        <nav class="header-nav align-items-center d-lg-flex"
+              id="headerNav">
+          <a 
+              
+              href="https://github.com/conan-io/conan" rel="nofollow"
+              class="btn bg-bright-gray">
+            <img src="img/small_github.png"
+                  alt="Github">
           </a>
-          <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
+          <a href="https://docs.conan.io/"
+              class="btn bg-bright-gray black">
             Docs
           </a>
-          <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
+          <a href="https://blog.conan.io/"
+              class="btn bg-bright-gray black">
             Blog
           </a>
-          <a href="https://conan.io/center/" class="btn bg-blue white" target="_blank">
-            <img src="img/small-search.png" alt="Search"> Conan-Center
+          <a href="https://conan.io/center/"
+              class="btn bg-blue white"
+              target="_blank">
+            <img src="img/small-search.png"
+                  alt="Search">
+              Conan-Center
           </a>
         </nav>
 
@@ -85,7 +99,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
 </header>
-
 <!-- TAC -->
 <section id="terms-and-conditions" class="py-5">
     <div class="container section-content">
@@ -246,7 +259,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 <li><a href="https://conan.io/center">
                     Conan-Center
                   </a></li>
-                <li><a href="https://github.com/conan-io/conan">
+                <li><a href="https://github.com/conan-io/conan" rel="nofollow">
                     GitHub
                   </a></li>
               </ul>
