--- a/downloads.html
+++ b/downloads.html
@@ -374,7 +374,7 @@
                       </div>
                       <!-- TEXT -->
                       <div class="cn-box cn-main">
-                         Liunx Installer
+                         Linux Installer
                       </div>
                       <!-- ACTION -->
                       <a href="https://releases.jfrog.io/artifactory/bintray-artifactory/org/artifactory/cpp/ce/jfrog-artifactory-cpp-ce/[RELEASE]/jfrog-artifactory-cpp-ce-[RELEASE]-linux.tar.gz" data-tech="linux" class="cn-box cn-action cn-download">
