--- a/downloads.html
+++ b/downloads.html
@@ -521,7 +521,7 @@ sudo apt-get install jfrog-artifactory-cpp
                       <a class="cn-box cn-main copy-text show-full-command"
                         data-toggle="tooltip"
                         title="docker run --name artifactory -d -p 8081:8081 -p 8082:8082
-                        releases-docker.jfrog.io/jfrog/artifactory-cpp-ce:latest">
+docker.bintray.io/jfrog/artifactory-cpp-ce:latest">
                          <span class="in-copy-text">$ docker run ... </span>
                       </a>
                       <!-- ACTION -->
@@ -533,7 +533,7 @@ sudo apt-get install jfrog-artifactory-cpp
                       </a>
                       <textarea class="position-absolute" id="dockerCommand">
 docker run --name artifactory -d -p 8081:8081 -p 8082:8082
-dl.bintray.com/jfrog/artifactory-cpp-ce:latest
+docker.bintray.io/jfrog/artifactory-cpp-ce:latest
                       </textarea>
                     </div>
                     <!-- / DOKCER -->
