images res, tar.gz link and some styling

--- a/downloads.html
+++ b/downloads.html
@@ -355,7 +355,7 @@
                          Download tar.gz
                       </div>
                       <!-- ACTION -->
-                      <a href="https://api.bintray.com/content/jfrog/artifactory/jfrog-artifactory-cpp-ce-$latest.zip;bt_package=jfrog-artifactory-cpp-ce-zip" class="cn-box cn-action cn-download" data-tech="zip">
+                      <a href="https://releases.jfrog.io/artifactory/bintray-artifactory/org/artifactory/cpp/ce/jfrog-artifactory-cpp-ce/[RELEASE]/jfrog-artifactory-cpp-ce-[RELEASE]-linux.tar.gz" class="cn-box cn-action cn-download" data-tech="zip">
                       </a>
                     </div>
                     <!-- / ARTIFACTORY ZIP -->
