--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
     <section class="diagram py-3" id="diagram">
       <div class="container py-3">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center diagram-wrapper">
             <img
               src="img/diagram.png"
-              alt="Diagram"
+              alt="Conan, the C/C++ Package Manager"
               class="d-none d-sm-inline"
             />
             <img
               src="img/conan-io-diagram-mobile.png"
-              alt="Diagram"
+              alt="Conan, the C/C++ Package Manager"
               class="d-sm-none"
             />
           </div>
