update link to ConanCenter (with / at the end)

--- a/downloads.html
+++ b/downloads.html
@@ -730,7 +730,7 @@ docker.bintray.io/jfrog/artifactory-cpp-ce:latest
                     <li><a href="downloads.html" id="download_btn_bottom">
                         Download
                       </a></li>
-                    <li><a href="https://conan.io/center">
+                    <li><a href="https://conan.io/center/">
                         Conan-Center
                       </a></li>
                     <li><a href="https://github.com/conan-io/conan" rel="nofollow">
