--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               </h3>
               <div class="content one-advantage-content">
                 <p class="text">
-                  <a href="https://conan.io/center" target="_blank" class="text-link">
+                  <a href="https://conan.io/center/" target="_blank" class="text-link">
                   ConanCenter is the central repository where you can search and
                   discover all of the available open source Conan packages
                   created by the community. It includes recipe and configuration
@@ -326,7 +326,7 @@
                   </a>
                 </p>
                 <a
-                  href="https://conan.io/center"
+                  href="https://conan.io/center/"
                   class="big-btn bg-blue white"
                 >
                   Learn More >
@@ -1068,7 +1068,7 @@
                     <li><a href="downloads.html" id="download_btn_bottom">
                         Download
                       </a></li>
-                    <li><a href="https://conan.io/center">
+                    <li><a href="https://conan.io/center/">
                         Conan-Center
                       </a></li>
                     <li><a href="https://github.com/conan-io/conan" rel="nofollow">
