--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><a href="downloads.html" id="download_btn_bottom">
                     Download
                   </a></li>
-                <li><a href="https://conan.io/center">
+                <li><a href="https://conan.io/center/">
                     Conan-Center
                   </a></li>
                 <li><a href="https://github.com/conan-io/conan" rel="nofollow">
