--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -256,7 +256,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 <li><a href="downloads.html" id="download_btn_bottom">
                     Download
                   </a></li>
-                <li><a href="https://conan.io/center">
+                <li><a href="https://conan.io/center/">
                     Conan-Center
                   </a></li>
                 <li><a href="https://github.com/conan-io/conan" rel="nofollow">
