meta tags, downloads.

--- a/downloads.html
+++ b/downloads.html
@@ -9,8 +9,8 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="title" content="Conan by JFrog - the C / C++ Package Manager for Developers">
-    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager that allows you to create and share all your native binaries.">
+    <meta name="title" content="Download Conan - C/C++ Open Source Package Manager">
+    <meta name="description" content="Install the latest version of Conan, the open Source package manager for C/C++, to start using Conan and downloading packages from the ConanCenter">
     <link
     rel="shortcut icon"
     type="image/png"
