--- a/downloads.html
+++ b/downloads.html
@@ -304,9 +304,9 @@
                    <div class="left-downloads-spacer"></div>
                   <!-- TEXT TWO -->
                   <div class="text text-two pt-2 pt-md-5">
-                    <p>
+                    <p class="text-break">
                       Read more about Conan installation: </br >
-                      <a href="https://docs.conan.io/en/latest/installation.html">
+                      <a class="text-break" href="https://docs.conan.io/en/latest/installation.html">
                         https://docs.conan.io/en/latest/installation.html
                       </a>
                     </p>
