downloads logo to svg

--- a/downloads.html
+++ b/downloads.html
@@ -145,9 +145,10 @@
               <div class="content px-2 px-md-4 py-2 p-md-4">
                 <!-- SMALL TITLE WITH ICON -->
                 <div class="small-title d-flex align-items-center">
-                  <img data-src="img/conan-downloads-logo.png"
+                  <img data-src="img/conan-downloads-logo.svg"
                        alt="Conan Package"
-                       class="mr-2 small-title-lazy">
+                       class="mr-2 small-title-lazy"
+                       style="width: 280px">
                 </div>
                 <!-- TEXT -->
                 <div class="text pb-1">
@@ -332,9 +333,10 @@
               <div class="content px-2 px-md-4 py-2 p-md-4">
                 <!-- SMALL TITLE WITH ICON -->
                 <div class="small-title d-flex align-items-center">
-                  <img data-src="img/arti-downloads-logo.png"
+                  <img data-src="img/arti-downloads-logo.svg"
                        alt="Artifactory"
-                       class="mr-2 lazy">
+                       class="mr-2 lazy"
+                       style="width: 200px;">
                 </div>
                 <!-- TEXT -->
                 <div class="text pb-1">
