--- a/downloads.html
+++ b/downloads.html
@@ -70,7 +70,7 @@
           <!-- LOGO -->
           <a href="index.html"
              class="col-10 col-lg-4 d-block">
-            <img src="img/logo-conan.png"
+            <img src="img/logo-conan.png" class="header-logo"
                  alt="Conan C++ Package Manager">
           </a>
 
@@ -145,7 +145,7 @@
               <div class="content px-2 px-md-4 py-2 p-md-4">
                 <!-- SMALL TITLE WITH ICON -->
                 <div class="small-title d-flex align-items-center">
-                  <img data-src="img/conan-downloads-logo.svg"
+                  <img src="img/conan-downloads-logo.svg"
                        alt="Conan Package"
                        class="mr-2 small-title-lazy"
                        style="width: 280px">
@@ -164,7 +164,7 @@
                   <div class="installers pb-4">
                     
                     <!-- MAIN PYTON -->
-                    <div class="package-wrapper d-flex flex-no-wrap">
+                    <div class="package-wrapper d-flex flex-no-wrap mb-0">
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
@@ -333,7 +333,7 @@
               <div class="content px-2 px-md-4 py-2 p-md-4">
                 <!-- SMALL TITLE WITH ICON -->
                 <div class="small-title d-flex align-items-center">
-                  <img data-src="img/arti-downloads-logo.svg"
+                  <img src="img/arti-downloads-logo.svg"
                        alt="Artifactory"
                        class="mr-2 lazy"
                        style="width: 200px;">
