--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <!-- LOGO -->
           <a href="index.html"
              class="col-10 col-lg-4 d-block">
-            <img src="img/logo-conan.png"
+            <img src="img/logo-conan.png" class="header-logo"
                  alt="Conan C++ Package Manager">
           </a>
 
