--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -53,7 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- LOGO -->
       <a href="index.html"
           class="col-10 col-lg-4 d-block">
-        <img src="img/logo-conan.png"
+        <img src="img/logo-conan.png" class="header-logo"
               alt="Conan C++ Package Manager">
       </a>
 
