turn all to svg

--- a/downloads.html
+++ b/downloads.html
@@ -92,7 +92,7 @@
                  
                  href="https://github.com/conan-io/conan" rel="nofollow"
                  class="btn bg-bright-gray">
-                <img src="img/small_github.png"
+                <img src="img/small-github.svg"
                      alt="Github">
               </a>
               <a href="https://docs.conan.io/"
@@ -106,7 +106,7 @@
               <a href="https://conan.io/center/"
                  class="btn bg-blue white"
                  target="_blank">
-                <img src="img/small-search.png"
+                <img src="img/small-search.svg"
                      alt="Search">
                  Conan-Center
               </a>
@@ -119,7 +119,7 @@
     </header>
 
     <section class="downloads-hero position-relative" id="downloadsHero">
-      <img src="img/downloads-hero-bg-new.png"
+      <img src="img/downloads-hero-bg-new.svg"
            class="position-absolute hero-bg downloads-hero-bg d-none d-xl-inline d-only-hero-bg"
            alt="Conan C++ Package Manager">
       <div class="container">
@@ -168,7 +168,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/pyton-small-pack.png"
+                             data-src="img/downloads/pyton-small-pack.svg"
                              alt="pyton">
                       </div>
                       <!-- TEXT -->
@@ -194,7 +194,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/darwin-small-pack.png"
+                             data-src="img/downloads/darwin-small-pack.svg"
                              alt="Darwin">
                       </div>
                       <!-- TEXT -->
@@ -216,7 +216,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/debian-small-pack.png"
+                             data-src="img/downloads/debian-small-pack.svg"
                              alt="Debian">
                       </div>
                       <!-- TEXT -->
@@ -235,7 +235,8 @@
                       <div class="cn-box small">
                         <img class="lazy"
                              data-src="img/downloads/windows-small-pack.png"
-                             alt="Windows">
+                             alt="Windows"
+                             style="width: 30px;">
                       </div>
                       <!-- DROPDOWN -->
                       <div class="cn-box cn-main cn-dropdown">
@@ -266,7 +267,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/archlinux-small-pack.png"
+                             data-src="img/downloads/archlinux-small-pack.svg"
                              alt="Arc Linux">
                       </div>
                       <!-- TEXT -->
@@ -288,7 +289,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/github-small-pack.png"
+                             data-src="img/downloads/github-small-pack.svg"
                              alt="Github">
                       </div>
                       <!-- TEXT -->
@@ -371,7 +372,7 @@
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/linux-small-pack.png"
+                             data-src="img/downloads/linux-small-pack.svg"
                              alt="Linux">
                       </div>
                       <!-- TEXT -->
@@ -446,7 +447,7 @@ sudo apt-get install jfrog-artifactory-cpp
                   <!-- LOGO -->
                   <div class="cn-box small">
                     <img class="lazy"
-                         data-src="img/downloads/debian-small-pack.png"
+                         data-src="img/downloads/debian-small-pack.svg"
                          alt="debian">
                   </div>
                   <!-- DROPDOWN -->
@@ -481,7 +482,8 @@ sudo apt-get install jfrog-artifactory-cpp
                       <div class="cn-box small">
                         <img class="lazy"
                              data-src="img/downloads/windows-small-pack.png"
-                             alt="Windows">
+                             alt="Windows"
+                             style="width: 30px;">
                       </div>
                       <!-- TEXT -->
                       <div class="cn-box cn-main">
@@ -498,7 +500,7 @@ sudo apt-get install jfrog-artifactory-cpp
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/compose-small-pack.png"
+                             data-src="img/downloads/compose-small-pack.svg"
                              alt="Windows">
                       </div>
                       <!-- TEXT -->
@@ -545,7 +547,7 @@ docker.bintray.io/jfrog/artifactory-cpp-ce:latest
                       <!-- LOGO -->
                       <div class="cn-box small">
                         <img class="lazy"
-                             data-src="img/downloads/darwin-small-pack.png"
+                             data-src="img/downloads/darwin-small-pack.svg"
                              alt="Darwin">
                       </div>
                       <!-- TEXT -->
@@ -628,7 +630,7 @@ docker.bintray.io/jfrog/artifactory-cpp-ce:latest
         <div class="row">
           <div class="col-12">
             <h2 class="white d-flex justify-content-center" id="signUpTitle">
-              <div class="position-relative"><img data-src="img/letter.png" alt="Sign Up" class="position-absolute letter lazy"></div>
+              <div class="position-relative"><img data-src="img/letter.svg" alt="Sign Up" class="position-absolute letter lazy"></div>
               <span>SIGN ME UP FOR RELEASE UPDATES</span>
             </h2>
             <div class="mktoFormWrapper">
