--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                  
                  href="https://github.com/conan-io/conan" rel="nofollow"
                  class="btn bg-bright-gray">
-                <img src="img/small_github.png"
+                <img src="img/small-github.svg"
                      alt="Github">
               </a>
               <a href="https://docs.conan.io/"
@@ -107,7 +107,7 @@
               <a href="https://conan.io/center/"
                  class="btn bg-blue white"
                  target="_blank">
-                <img src="img/small-search.png"
+                <img src="img/small-search.svg"
                      alt="Search">
                  Conan-Center
               </a>
@@ -125,7 +125,7 @@
       class="blue-gradient-bg py-5 position-relative"
     >
       <img
-        src="img/hero-bg.png"
+        src="img/hero-bg.svg"
         class="position-absolute hero-bg"
         alt="Conan C++ Package Manager"
       />
@@ -253,7 +253,7 @@
     <!-- LEARN MORE -->
     <section class="learn-more bg-bright-gray py-0 py-md-5 position-relative" id="learnMore">
       <img
-        data-src="img/lm-bg.png"
+        data-src="img/lm-bg.svg"
         alt="Conan C++ Package Manager"
         class="lm-bg position-absolute lazy d-none d-xl-inline"
       />
@@ -345,7 +345,7 @@
         <div class="row">
           <div class="col-12">
             <div class="h2 white d-flex justify-content-center" id="signUpTitle">
-              <div class="position-relative"><img data-src="img/letter.png" alt="Sign Up"
+              <div class="position-relative"><img data-src="img/letter.svg" alt="Sign Up"
                   class="position-absolute letter lazy"></div>
               <span>SIGN ME UP FOR RELEASE UPDATES</span>
             </div>
@@ -952,7 +952,7 @@
     <!-- CONTACT US -->
     <section class="contact-us position-relative py-0 py-md-5" id="contactUs">
       <img
-        data-src="img/hero-bg.png"
+        data-src="img/hero-bg.svg"
         class="lazy position-absolute contact-bg d-none d-xl-inline"
         alt="Conan C++ Package Manager"
       />
