--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               
               href="https://github.com/conan-io/conan" rel="nofollow"
               class="btn bg-bright-gray">
-            <img src="img/small_github.png"
+            <img src="img/small-github.svg"
                   alt="Github">
           </a>
           <a href="https://docs.conan.io/"
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://conan.io/center/"
               class="btn bg-blue white"
               target="_blank">
-            <img src="img/small-search.png"
+            <img src="img/small-search.svg"
                   alt="Search">
               Conan-Center
           </a>
@@ -150,7 +150,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
     <div class="row">
       <div class="col-12">
         <h2 class="white d-flex justify-content-center" id="signUpTitle">
-          <div class="position-relative"><img src="img/letter.png" alt="Sign Up"
+          <div class="position-relative"><img src="img/letter.svg" alt="Sign Up"
               class="position-absolute letter"></div>
           <span>SIGN ME UP FOR RELEASE UPDATES</span>
         </h2>
