logos to our user's voice

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="h2 white text-center mt-2 mb-5">OUR USERS' VOICE</div>
+            <div class="h2 white text-center mt-2 mb-4">OUR USERS' VOICE</div>
           </div>
         </div>
 
@@ -573,6 +573,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/github.svg" alt="github">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan makes it easier for our many automotive GitHub
@@ -601,6 +605,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/microblink.svg" alt="microblink">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan integration enabled a 10x reduction in our
@@ -633,6 +641,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/tanker.svg" alt="tanker">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       I’ll simpley say that I was a total n00b in build system
@@ -660,6 +672,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/disbelief.svg" alt="disbelief">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan’s flexibility made it possible to do something that
@@ -687,36 +703,10 @@
 
                 <div class="testi">
                   <div class="inner">
-                    <!-- TEXT -->
-                    <p class="text text-center">
-                      With Conan it was a miracle to seamlessly manage C++
-                      dependencies between Linux and Mac OS X. Whenever a new
-                      compiler was used Conan easily recompiled all third party
-                      libraries. Updating to the newer versions of the libraries
-                      become now so much easier and also very reproducible and
-                      automated as well. Thanks for such a great project and
-                      keep up improving it!
-                    </p>
-                    <!-- QUOTE -->
-                    <div class="quote d-flex align-items-center justify-content-center my-3">
-                      <span class="line"></span>
-                      <img
-                        class="mx-2"
-                        src="img/white-quote.svg"
-                        alt=""
-                        class="quote-image"
-                      />
-                      <span class="line"></span>
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/keysight.svg" alt="keysight">
                     </div>
-                    <div class="name text-center">Ovanes Markarian</div>
-                    <div class="position text-center font-weight-bold">
-                      Senior Software Engineer
-                    </div>
-                  </div>
-                </div>
-
-                <div class="testi">
-                  <div class="inner">
                     <!-- TEXT -->
                     <p class="text text-center">
                       What is best in life? Crushing your build times, driving
@@ -743,6 +733,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/brands/company_32.png" alt="Mercedes-Benz">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan has amplified our productivity, by minimizing the
@@ -770,6 +764,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/melexis.svg" alt="melexis">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan brings C++ development and dependency management
@@ -799,6 +797,10 @@
                 </div>
 
                 <div class="testi">
+                  <!-- COMPANY LOGO -->
+                  <div class="text-center pb-4">
+                    <img class="mx-auto" src="img/our-users/arxan.svg" alt="arxan">
+                  </div>
                   <div class="inner">
                     <!-- TEXT -->
                     <p class="text text-center">
@@ -825,6 +827,10 @@
                 </div>
 
                 <div class="testi">
+                  <!-- COMPANY LOGO -->
+                  <div class="text-center pb-4">
+                    <img class="mx-auto" src="img/our-users/pix4d.svg" alt="pix4d">
+                  </div>
                   <div class="inner">
                     <!-- TEXT -->
                     <p class="text text-center">
@@ -859,6 +865,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/appsanywhere.svg" alt="appsanywhere">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan arrived just in time to enable us to test multiple
@@ -889,6 +899,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/khomp.svg" alt="khomp">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan is the best solution for external dependencies in
@@ -916,6 +930,10 @@
 
                 <div class="testi">
                   <div class="inner">
+                    <!-- COMPANY LOGO -->
+                    <div class="text-center pb-4">
+                      <img class="mx-auto" src="img/our-users/imazen.svg" alt="imazen">
+                    </div>
                     <!-- TEXT -->
                     <p class="text text-center">
                       Conan has been a lifesaver in managing cross-platform
