diagram and thanks message

--- a/downloads.html
+++ b/downloads.html
@@ -648,7 +648,7 @@ docker.bintray.io/jfrog/artifactory-cpp-ce:latest
                     // Get the form's jQuery element and hide it
                     form.getFormElem().fadeOut();
                     //show success
-                    document.getElementById('signUpTitle').textContent = 'Thanks!, you have subscribed successfuly.'
+                    document.getElementById('signUpTitle').textContent = 'Thanks! you have subscribed successfuly.'
                     // Return false to prevent the submission handler from taking the lead to the follow up url
                     return false;
                   });
