--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="col-12 text-center diagram-wrapper">
             <img
-              src="img/diagram.png"
+              src="img/diagram.svg"
               alt="Conan, the C/C++ Package Manager"
               class="d-none d-sm-inline"
             />
@@ -364,7 +364,7 @@
                     // Get the form's jQuery element and hide it
                     form.getFormElem().fadeOut();
                     //show success
-                    document.getElementById('signUpTitle').textContent = 'Thanks!, you have subscribed successfuly.'
+                    document.getElementById('signUpTitle').textContent = 'Thanks! you have subscribed successfuly.'
                     // Return false to prevent the submission handler from taking the lead to the follow up url
                     return false;
                   });
@@ -999,7 +999,7 @@
                   // Get the form's jQuery element and hide it
                   form.getFormElem().fadeOut();
                   //show success and remove email
-                  document.getElementById('contactUsTitle').textContent = 'Thanks!, your message has been sent.';
+                  document.getElementById('contactUsTitle').textContent = 'Thanks! your message has been sent.';
                   document.getElementById('contactUsEmail').fadeOut();
                   // Return false to prevent the submission handler from taking the lead to the follow up url
                   return false;
