--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -169,7 +169,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 // Get the form's jQuery element and hide it
                 form.getFormElem().fadeOut();
                 //show success
-                document.getElementById('signUpTitle').textContent = 'Thanks!, you have subscribed successfuly.'
+                document.getElementById('signUpTitle').textContent = 'Thanks! you have subscribed successfuly.'
                 // Return false to prevent the submission handler from taking the lead to the follow up url
                 return false;
               });
